test/tests/AmbiguousMethodReference.expected
AmbiguousMethodReference.panda:2:19: error: reference to method '+' is ambiguous. The following methods are equally good matches:
    function panda.core.Int64.+(other:panda.core.Int64):panda.core.Int64 (Int64.panda:79:5)
    function panda.core.Int64.+(other:panda.core.Int32):panda.core.Int64 (Int64.panda:74:5)
    function panda.core.Int64.+(other:panda.core.Int16):panda.core.Int64 (Int64.panda:69:5)
    function panda.core.Int64.+(other:panda.core.Int8):panda.core.Int64 (Int64.panda:64:5)
1 error
