test/tests/AmbiguousMethodReference.panda
method main() {
    def add := Int.+
}
